# SLAMPractice

./: .gitignore
cmakePractice/: CMakeLists.txt  libHello.cpp  libHello.h  main.cpp
task3-EIgen的使用/: CMakeLists.txt  coordinateTrans.cpp  solvingLSQ.cpp  useMatrix.cpp
task5-useOpenCV&task6-useCeres/: CMakeLists.txt  SnavelyReprojectionError.h  reprojectErrJoc.h  residuals01.txt  residuals02.txt  se3Parameterization.h  sensor.yaml  undistort.cpp  useOpenCV.cpp
